--- a/style.css
+++ b/style.css
@@ -14,11 +14,18 @@ h3{
 }
 .articleb{
     background-image: linear-gradient(purple, green);
+    border-radius: 0.75em;
+    padding: 1em;
+    box-shadow: 10px 5px 5px red;
 }
 header{
     background-image: url("https://images.unsplash.com/photo-1470125634816-ede3f51bbb42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8c3Vuc2V0JTIwcGFub3JhbWF8ZW58MHx8MHx8&w=1000&q=80");
     background-size: cover;
     color: white;
+    border-radius: 0.75em;
+    padding: 1em;
+    box-shadow: 10px 5px 5px red;
+    text-shadow: 10px 5px 5px blue;
 }
 /* stle for anchor */
 a:link { 
@@ -32,4 +39,17 @@ a:visited {
 
 a:hover{
     color: lightseagreen;
+}
+
+img{
+    display: block ;
+    height: 20%;
+    border: lightseagreen;
+    border-radius: 0.75em;
+    margin-bottom: 0.75em;
+    box-shadow: 10px 5px 5px red;
+}
+
+.subheading{
+    border-bottom: 4mm ridge rgba(211, 220, 50, .6);
 }
